# EMIS

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  .gitmessage  API_ENDPOINTS.md  API_MIGRATION_STATUS.md  CHANGELOG.md  COMPLETE_GUIDE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CONVERSION_SUMMARY.md  DEVELOPMENT.md  DJANGO_MIGRATION.md  Dockerfile  FASTAPI_REMOVAL.md  FINANCE_FACULTY_IMPLEMENTATION.md  FRONTEND_QUICKSTART.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  Pipfile  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  STUDENTS_MODULE_COMPLETE.md  check-venv.sh  docker-compose.yml  full_implementation.py  generate_module.py  implement_all_modules.sh  make_auth_migrations.py  make_exam_migrations.py  manage.py  package.json  (+11 more)
.github/workflows/: ci.yml
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_create_all_tables.py  002_add_new_tables.py  003_billing_reporting.py  004_hierarchy_annual.py  20251110_add_academic_calendar.py  20251110_inventory_transport_placement.py  add_billing_enhancements_20251110_133417.py
apps/: db.sqlite3
apps/admin/: urls.py
apps/admissions/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/analytics/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
apps/attendance/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/authentication/: __init__.py  admin.py  api_urls.py  api_views.py  forms.py  forms_new.py  jwt.py  models.py  security.py  security_utils.py  serializers.py  urls.py  views.py
apps/calendar/: __init__.py  admin.py  api_urls.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/calender/: apps.py
apps/cms/: admin.py  api_urls.py  apps.py  context_processors.py  filters.py  forms.py  managers.py  permissions.py  tests.py  urls.py  utils.py  views.py
apps/core/: __init__.py  admin.py  api_urls.py  api_views.py  cache.py  decorators.py  email_utils.py  error_codes.py  exceptions.py  export_utils.py  file_utils.py  logging.py  middleware.py  models.py  permissions.py  permissions_utils.py  urls.py  validators.py  views.py
apps/courses/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/emis/: asgi.py  settings.py  urls.py  wsgi.py
apps/exam/: BBA_Internal Marks_Spring 2025_DOB.xlsx  automation.py  urls.py  views.py
apps/exams/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  models.py  permissions.py  signals.py  urls.py  utils.py  views.py
apps/faculty/: admin.py  api_urls.py  apps.py  filters.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
apps/finance/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  models_backup.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
apps/hostel/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  models.py  permissions.py  urls.py  utils.py  views.py
apps/hr/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
apps/inventory/: admin.py  api_urls.py  api_views.py  apps.py  filters.py  forms.py  managers.py  permissions.py  urls.py  utils.py  views.py
apps/lms/: __init__.py  admin.py  api_urls.py  api_views.py  (+10 more)
calender/: models.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: ADMIN_PANEL_IMPLEMENTATION.md  ADMIN_PANEL_QUICK_REFERENCE.md  API_DOCUMENTATION.md  API_TESTING.md  ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  CALENDAR_USAGE_GUIDE.md  ENHANCEMENTS_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NAVIGATION.md  PRODUCTION_ENHANCEMENTS.md  QUICKSTART_AUTH.md  QUICK_REFERENCE.md  RBAC_IMPLEMENTATION.md  SERVICES_DOCUMENTATION.md  deployment.md
emis/: settings.py  urls.py
frontend/: .env.example  .env.production  .gitignore  INTEGRATION.md  README.md  app.py  next.config.ts  package-lock.json  package.json  requirements.txt  start-frontend.sh
monitoring/: README.md  alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
src/: app.py  config.py  database.py
templates/: base.html
tests/: conftest.py
(+1563 files in other folders)
